src/components/Filters.css
.filters {
    width: 100vw;
    height: 100vh;
    z-index: 9999;
    background-color: rgba(0, 0, 0, 0.452);
    position: fixed;
    top: 0;
    opacity: 0;
    visibility: hidden;
    z-index: 1000000000000000;
    transition: .4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
}

.show {
    opacity: 1;
    visibility: visible;
}

.filter_selectors {
    background-color: rgb(0, 0, 0);
    height: 100vh;
    width: 20vw;
    position: fixed;
    top: 0;
    right: 0;
    font-family: Onest;
    transform: translateX(100%);
    transition: .4s cubic-bezier(0.455, 0.03, 0.515, 0.955);
    font-size: 18px;
}

.open {
    transform: translateX(0);
}

.filters_button {
    color: white;
    font-size: 14px;
    display: flex;
    align-items: center;
    gap: 5px;
}

.filter_selectors {
    color: white;
    padding: 10rem 3rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.filter_price {
    display: flex;
    justify-content: space-between;
    gap: 2rem;
}

.filter_price label, .filter_price span {
    text-wrap: nowrap;
    font-size: 14px;
}

.filter_price input {
    cursor: pointer;
    font-size: 14px;
}

.filter_category {
    display: flex;
    gap: 1rem;
    justify-content: space-between;
    align-items: center;
    font-size: 14px;
}

.filter_category select {
    border: none;
    outline: none;
    font-family: Onest;
    font-size: 14px;
    border-radius: 8px;
    padding: 12px 16px;
    background-color: rgba(255, 255, 255, 0.068);
    color: white;
    cursor: pointer;
}

.filter_category select option {
    color: black;
}

.filter_header {
    display: flex;
    align-items: center;
}

.filter_header strong {
    letter-spacing: 1.1px;
}

